# HuntzenJobs

./: .env.example  .env.test  .env.test.example  .gitignore  ACTIONS_IMMEDIATES.md  AGENTS.md  AUDIT_I18N.md  AUDIT_UX_DESIGN.md  BUG_FIX_PLAN.md  CHANGELOG_FIXES.md  CONTRIBUTING.md  DARK_MODE_IMPLEMENTATION_COMPLETE.md  DEMO_VISUELLE.md  DEPLOYMENT.md  DEPLOYMENT_ENV_VARS.md  DEPLOYMENT_STATUS.md  DOCKER_USAGE.md  Dockerfile.backend  FINAL_DIAGNOSTIC.md  FIX_PRODUCTION_GUIDE.md  I18N_TODO_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  LICENCE  LICENSE  LOGO_GUIDE.md  PLAN_IMPLEMENTATION_DARK_MODE.md  PRODUCTION_DOMAIN_CHECKLIST.md  PRODUCTION_FIX_COMPLETE.md  RAILWAY_FIX_CORS.md  RAILWAY_REDEPLOY_GUIDE.md  README.md  RESUME_AUDIT_VISUEL.md  RESUME_IMPLEMENTATION.md  SEO_DOMINATION_PLAN.md  SEO_GUIDE_COMPLET.md  STRIPE_SIMPLIFICATION_COMPLETE.md  SUPABASE_JWT_SECRET_SETUP.md  TESTING_ACCESSIBILITY.md  apply_anonymous_cv_migration.py  (+38 more)
backend/: .dockerignore  .env.railway  .railway-deploy  AGENTS.md  BUGS_IDENTIFIED.md  Dockerfile  Procfile.worker  QA_REPORT.md  SUPABASE_AUDIT_REPORT.md  USEFUL_SQL_QUERIES.sql  audit_report.json  chat_branding.py  clean_main.py  modal_pdf_extractor_app.py  nixpacks.toml  pyproject.toml  railway.stress-worker.toml  railway.toml  railway.worker.toml  requirements.txt  sync-modal.sh  test_insider_feature.py  test_radius.py
backend/app/: README.md  __init__.py  cache.py  database.py  quota.py  schemas.py
backend/app/agents/: cv_analyzer_agent_legacy.py  cv_router.py  optimized_nodes.py
backend/prompts/: branding_main.txt  career_score_advisor.txt  coach_career_planner.txt  coach_main.txt  coach_salary_advisor.txt  coach_skill_analyzer.txt  coach_training_advisor.txt  cover_letter_generator.txt  cv_adapter_cv_mapper.txt  cv_adapter_fact_checker.txt  cv_adapter_job_analyzer.txt  cv_adapter_main.txt  cv_adapter_rewriter.txt  cv_analyzer_context.txt  cv_ats_scorer.txt  cv_improvement_advisor.txt  cv_info_extractor.txt  cv_job_matcher.txt  cv_skill_extractor.txt  expat_intent_parser.txt  expat_main.txt  expat_query_planner.txt  expat_reasoning_engine.txt  insider_finder.txt  job_scout_context.txt  job_scout_market_analyzer.txt  job_scout_query_refiner.txt  job_scout_ranker.txt  parameter_extractor.txt  recruiter_finder.txt
backend/scripts/: test_batch_hunt.py
backend/src/: __init__.py  main.py  modal_integration.py
backend/src/agents/: __init__.py  base.py
backend/src/api/: __init__.py  deps.py  middleware.py
backend/src/config/: geocoding.py  settings.py
backend/src/models/: __init__.py  schemas.py
backend/src/services/: __init__.py  abuse_detection.py  admin_alerts.py  branding_memory.py  cv_chat_extractor.py  distance_service.py  dynamic_pdf.py  email.py  geocoding_service.py  modal_pdf_extractor.py  notifications.py  pdf_generator.py  referrals.py  stripe.py  (+1 more)
backend/tests/: conftest.py  test_coach_agent.py  test_cv_analyzer.py  test_events.py  test_france_travail.py  test_geographic_filtering.py  test_job_scout.py  test_out.txt  test_recruiter_finder_logic.py  verify_search_concurrency.py
(+812 files in other folders)
