[project]
name = "huntzen"
version = "3.0.0"
description = "AI-Powered Career Platform with Deep LangChain Agents"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Abdessamad", email = "contact@huntzen.ai"}
]
keywords = ["ai", "career", "langchain", "fastapi", "job-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # FastAPI & Web
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "gunicorn>=21.2.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.3",
    "httpx>=0.26.0",
    
    # LangChain Core (NO LangGraph)
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-groq>=0.0.1",
    
    # LLM Provider
    "groq>=0.4.0",
    
    # Data Processing
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    
    # PDF Processing (IBM Docling)
    "docling>=2.0.0",
    "python-docx>=1.1.0",
    "weasyprint>=62.0",
    
    # HTTP & Scraping
    "beautifulsoup4>=4.12.0",
    
    # Database (Optional)
    "supabase>=2.3.0",
    "psycopg[pool]>=3.1.0",  # PostgreSQL async driver with connection pooling

    # Payments (Sprint 3 - Recruiter Contact)
    "stripe>=8.0.0",

    # Email Service (Sprint 3)
    "resend>=2.0.0",
    "email-validator>=2.0.0",

    # Utilities
    "tenacity>=8.2.0",
    "cachetools>=5.3.0",
    "structlog>=24.1.0",  # Logging for modal_integration

    # Cache (Redis)
    "upstash-redis>=0.15.0",
    "redis>=5.0.0",  # Redis client for SlowAPI backend (REQUIRED!)

    # Rate Limiting
    "slowapi>=0.1.9",

    # Error Tracking
    "sentry-sdk[fastapi]>=2.0.0",

    # Country & City Data (Phase 2 - Hybrid approach)
    "pycountry>=24.6.1",      # ISO 3166 country codes
    "geonamescache>=2.1.2",   # Local cities fallback
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
huntzen = "src.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E501", "B008", "C901"]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"
